[package]
name = "m95320"
version = "1.0.1"
authors = ["Jonah Stiennon <jonahss@gmail.com>", "Jonas Schievink <jonasschievink@gmail.com>", "Henrik Böving <hargonix@gmail.com>"]
edition = "2018"
description = "Driver for STMicroelectronics M95320 32-Kbit serial SPI bus EEPROM"
documentation = "https://docs.rs/m95320/"
repository = "https://github.com/jonass/m95320.git"
keywords = ["embedded-hal-driver", "eeprom", "spi", "STMicroelectronics", "M95320"]
categories = ["embedded"]
readme = "README.md"
license = "0BSD"

# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased"
replace = "## Unreleased\n\nNo changes.\n\n## {{version}} - {{date}}"

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'm95320 = "[a-z0-9\\.-]+"'
replace = 'm95320 = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/m95320/[a-z0-9\\.-]+"
replace = "https://docs.rs/m95320/{{version}}"

[dependencies]
embedded-hal = "0.2.7"
log = { version = "0.4.6", optional = true }
bitflags = "1.0.4"

[dev-dependencies]
rppal = { version = "0.12.0", features = ["hal"] }

[profile.dev]
opt-level = "z"
panic = "abort"
